<?xml version="1.0"?>
<package>
  <name>ros_bb_dc_motors</name>
  <version>0.0.0</version>
  <description>The ros_bb_dc_motors package</description>

  <maintainer email="v.mayoralv@gmail.com">Víctor Mayoral Vilches</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
